# GalerkinUmbrella

./: .gitignore  CMakeLists.txt  README.md
results/: temp_0.csv  temperature_history.csv
src/: main.cpp
src/1d/: main.cpp
src/core/: QuadTreeNode.cpp  QuadTreeNode.h  main.cpp  test_neighbors.cpp  test_neighbors.h
src/libs/: plot_heat.py
